Implemented working animated sprites and rendered them to the screen. Added GameObj functionality.

--- a/BrokenStreetFighter/BrokenStreetFighter/BrokenStreetFighter.vcxproj
+++ b/BrokenStreetFighter/BrokenStreetFighter/BrokenStreetFighter.vcxproj
@@ -70,7 +70,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SFML_STATIC;WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(SolutionDir)\SFML-2.3.2\include</AdditionalIncludeDirectories>
     </ClCompile>
